fixed footer logo position on mobile ver

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -19,7 +19,7 @@
     height: 45px;
     width: 78px;
     align-self: flex-end;
-    margin-bottom: 40px;
+    margin-bottom: 25px;
 
     background-image: url(../images/logo_miami.svg);
     background-repeat: no-repeat;
@@ -31,6 +31,7 @@
     @media (min-width: 768px) {
       height: 76px;
       width: 115px;
+      margin-bottom: 40px;
       background-image: url(../images/logo-footer.svg);
 
       transition-duration: 0.5s;
